--- a/MosadagClient/MosadagClient.csproj
+++ b/MosadagClient/MosadagClient.csproj
@@ -15,11 +15,11 @@
     <PackageTags>API, Ensight-tech</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion></AssemblyVersion>
-    <Version>1.9.5.0</Version>
+    <Version>2.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="supabase-csharp" Version="0.14.0" />
+    <PackageReference Include="Supabase" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
